button changes done logo uibroken fixed footer aligned bottom search filter styled

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -317,3 +317,17 @@ table.dataTable thead .sorting::after {
     margin-top: 0;
   }
 }
+
+.payments-dashboard {
+  background-color: rgba(255, 255, 255, 0.5);
+  border-collapse: collapse;
+  border-radius: 15px;
+  margin-top: 30px;
+}
+.mr20 {
+  margin-right: 20px;
+  margin-bottom: 0;
+}
+.flexbox {
+  display: flex;
+}
